Stop twitter feeds from jumping around on load

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
 	width: 90%;
 	display: block;
 	margin: 0 auto;
+	vertical-align: top;
 }
 
 h1{
